[metadata]
name = harvest
version = 0.0.1
author = Peter Griess
author_email = pg@std.in

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    flask

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    harvest = harvest.main:main